--- a/src/CSS/website.css
+++ b/src/CSS/website.css
@@ -56,7 +56,7 @@
 
 .LoaderHeading{
     margin:0;
-    padding:0;
+    padding:0 15px 0 7px;
     position:absolute;
     top:70%;
     overflow: hidden;
@@ -65,10 +65,10 @@
 
 .LoaderHeading:before{
     content:'';
-    width:80vw;
+    width:500px;
     height:50px;
     background: var(--theme);
-    border-left: 2px solid var(--theme);
+    border-left: 4px solid var(--theme);
     margin:0;
     padding:0;
     position:absolute;
