--- a/src/CSS/website.css
+++ b/src/CSS/website.css
@@ -87,8 +87,6 @@
 .pl {
     animation-name: bump;
     animation-timing-function: linear;
-    width: 8em;
-    height: 8em;
 }
 .pl__ring {
     stroke: hsla(var(--loader_hue), 10%, 10%, 0.1);
@@ -103,6 +101,13 @@
 @media (prefers-color-scheme: dark) {
     .pl__ring {
         stroke: hsla(var(--loader_hue), 10%, 90%, 0.1);
+    }
+}
+
+@media (min-width:789px){
+    .pl {
+        width: 8em;
+        height: 8em;
     }
 }
 
