--- a/src/CSS/common.css
+++ b/src/CSS/common.css
@@ -8,13 +8,11 @@
 .section_title {
     margin: 0;
     padding: 0 10px;
-    font: 700 5rem 'Kaushan Script', cursive;
-    color: transparent;
+    font-size: 5rem;
+    font-family: Philosopher, Montserrat, cursive;
+    font-weight:600;
+    color: var(--color);
     letter-spacing: 3px;
     text-transform: capitalize;
-    background-image: linear-gradient(180deg, var(--text) 0%, var(--color) 100%);
-    background-repeat: no-repeat;
-    -webkit-background-clip: text;
-    background-clip: text;
     filter: drop-shadow(2px 2px 3.5px #000008);
 }
