--- a/src/CSS/common.css
+++ b/src/CSS/common.css
@@ -14,5 +14,5 @@
     color: var(--color);
     letter-spacing: 3px;
     text-transform: capitalize;
-    filter: drop-shadow(2px 2px 3.5px #000008);
+    text-shadow: 1.5px 1.5px 3px #050505b8;
 }
