--- a/src/CSS/homeIcons.css
+++ b/src/CSS/homeIcons.css
@@ -2,6 +2,8 @@
     max-width: 100%;
     height: 100%;
     position: relative;
+    margin: auto;
+    padding: 20px 20px 0;
 }
 
 .nav_icons > ul {
@@ -25,12 +27,12 @@
     font-family: "Luxurious Roman", cursive;
     color: var(--text);
     letter-spacing: 0.075em;
-    font-size: 1.2rem;
+    font-size: 2rem;
 }
 
 #icons {
     color: var(--color);
-    font-size: 3rem;
+    font-size: 4rem;
     filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.3));
 }
 
@@ -51,25 +53,28 @@
         padding: 20px 0;
     }
     .nav_icons ul li:hover #icons {
-        transition: all 0.7s;
-        animation: icons 0.3s linear forwards;
+        transition: 0.1s  cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        animation: icons 0.1s linear forwards;
     }
 
     @keyframes icons {
         0% {
-            transform: rotate(0deg);
-            margin-top:-30px;
+            margin-top: -20px;
+            transform: scale(1 1);
         }
 
         100% {
-            transform: rotate(360deg);
-            font-size: 4.5rem;
-            margin-top:0px;
+            margin-top: 0px;
+            transform: scale(1.5, 1.5);
         }
     }
 
     .nav_icons ul li:hover h6 {
         display: none;
+    }
+    #mobile {
+        display: none;
+        opacity: 0;
     }
 }
 
@@ -78,5 +83,9 @@
         font-size: 0.8rem;
         width: max-content;
         margin: auto;
+    }
+    #desktop {
+        display: none;
+        opacity: 0;
     }
 }
