--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -6,18 +6,14 @@
 }
 
 .projects_container_inner {
-    height: 60rem;
+    height: 70vh;
     width: 100%;
     background: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 0;
-    overflow: hidden;
+    padding: 10px 0;
+    overflow-x: clip;
 }
 
 .carousel {
-    margin: auto;
     position: relative;
     width: 700px;
     height: 100%;
@@ -30,21 +26,20 @@
     width: 100%;
     height: 100%;
     transform: rotateY(calc(var(--offset) * 50deg))
-        scaleY(calc(1 + var(--abs-offset) * -0.4))
-        translateZ(calc(var(--abs-offset) * -30rem))
-        translateX(calc(var(--direction) * -5rem));
+        scaleY(calc(1 + var(--abs-offset) * -0))
+        translateZ(calc(var(--abs-offset) * -70rem))
+        translateX(calc(var(--direction) * -11rem));
     filter: blur(calc(var(--abs-offset) * 1rem));
     transition: all 0.3s ease-out;
 }
 
+.carousel_button {
+    width: 50vw;
+    margin: auto;
+}
+
 .nav {
     color: var(--color);
-    font-size: 5rem;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 50%;
     z-index: 20000;
     cursor: pointer;
     background: unset;
@@ -53,20 +48,16 @@
 
 .left {
     left: 85px;
-    transform: translateX(-100%) translateY(190px);
 }
 
 .right {
     right: 85px;
-    transform: translateX(100%) translateY(190px);
 }
 
 .right > svg,
 .left > svg {
-    font-size: 8rem;
+    font-size: 10rem;
 }
-
-/*^ PAST ^*/
 
 .CardOut {
     position: relative;
@@ -129,9 +120,6 @@
 .Card .CardData {
     color: #fff;
     position: absolute;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
     top: 0;
     width: 100%;
     height: 100%;
@@ -161,8 +149,6 @@
 .Card .CardData .Navigation {
     opacity: 0;
     width: 100%;
-    justify-content: space-between;
-    flex-direction: row;
     transition: all 0.5s ease-in-out;
     color: var(--parrot);
 }
@@ -213,16 +199,18 @@
 }
 
 @media (max-width: 667px) {
-    .projects_container {
-        min-height: 80vh;
-    }
-
-    .projects_container_inner {
-        height: 80vh;
-    }
-
     .card-container {
         height: 5%;
+    }
+
+    .carousel_button {
+        width: 60vw;
+    }
+
+    .carousel {
+        width: 100%;
+        height: 100%;
+        margin: 0;
     }
 
     .CardOut {
@@ -252,20 +240,25 @@
         margin: 10px 25px 20px 0px;
     }
 
-    .carousel {
-        height: 80%;
-    }
+}
 
-    .left {
-        left: 130px;
-    }
-
-    .right {
-        right: 130px;
+@media (max-width: 550px) {
+    .projects_container_inner {
+        height: 60vh;
     }
 
     .right > svg,
     .left > svg {
-        font-size: 4rem;
+        font-size: 7.5rem;
+    }
+}
+
+@media (max-width: 450px) {
+    .projects_container {
+        min-height: 85vh;
+    }
+
+    .projects_container_inner {
+        height: 50vh;
     }
 }
