--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -18,7 +18,7 @@
     position: absolute;
     top: 20px;
     bottom: 0px;
-    left: 7vw;
+    left: 6vw;
     width: 2px;
     content: "";
     background-color: #e9ecef;
@@ -56,9 +56,8 @@
     position: absolute;
     z-index: 100;
     left: 0;
-    width: 12.5vw;
-    height: 12.5vw;
-    margin-left: 0;
+    width: 10vw;
+    height: 10vw;
     text-align: center;
     color: var(--text);
     border: 7px solid var(--color);
@@ -101,15 +100,24 @@
 }
 
 .timeline .timeline-panel > h4:nth-child(1){
-    font-size: 2.2rem;
+    font-size: 3rem;
     margin: 10px 0;
     text-transform: uppercase;
+    font-family: Philosopher, Montserrat, cursive;
 }
+
+.timeline .timeline-panel-last > h4{
+    font-size: 3rem;
+    margin-top: 15.5px !important;
+    color: var(--color);
+}
+
 .timeline .timeline-panel .subheading {
     text-transform: none;
-    font-size: 2rem;
+    font-size: 2.3rem;
     color: var(--color);
     margin: 10px 0;
+    font-family: Philosopher, Montserrat, cursive;
 }
 
 .timeline .timeline-body > ul,
@@ -124,11 +132,15 @@
         flex-grow: 1;
         word-break: break-word;
     }
+
+    .timeline > li .timeline-panel-last {
+        margin-left:20vw;
+    }
 }
 
 @media (min-width: 768px) {
     .timeline:before {
-        left: 48vw;
+        left: 50%;
     }
 
     .timeline > li .timeline-panel {
@@ -139,9 +151,9 @@
     }
     .timeline > li .timeline-image {
         left: 50%;
-        width: 8vw;
-        height: 8vw;
-        margin-left: -50px;
+        transform: translateX(-50%);
+        width: 6vw;
+        height: 6vw;
     }
     .timeline > li:nth-child(even) > .timeline-panel {
         float: right;
@@ -160,11 +172,6 @@
     }
 }
 @media (min-width: 1200px) {
-    .timeline > li .timeline-image {
-        width: 8vw;
-        height: 8vw;
-        margin-left: -67px;
-    }
     .timeline > li:nth-child(even) > .timeline-panel {
         padding: 0 20px 20px;
     }
