--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -5,8 +5,8 @@
 }
 
 .contact_container > div {
-    margin: 10px;
-    padding: 10px;
+    margin: 10px 10px 0;
+    padding: 10px 10px 0;
 }
 
 .contact_form_out {
@@ -201,12 +201,11 @@
         justify-content: center;
         padding: 4vh 0;
     }
-    
+
     .contact_form {
         flex-direction: column;
         justify-content: center;
     }
-
 
     .contact_form_out > button {
         margin: 0px auto;
