--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -11,10 +11,10 @@
 }
 
 :root {
-    /* --color: hsl(382 100% 50% / 1); */
+    /* --color: hsl(0deg 78% 49%); */
     --code:358;
     --color: hsl(var(--code, 358), 81%, 49%);
-    --theme: hsl(0, 0%, 5%);
+    --theme: hsl(0deg 0% 11%);
     --text: hsl(0, 0%, 100%);
 }
 
