--- a/src/CSS/common.css
+++ b/src/CSS/common.css
@@ -1,7 +1,7 @@
 .section_title_out {
-    margin: auto auto 30px 15px;;
-    width:-moz-fit-content;
-    width:fit-content;
+    margin: auto auto 30px 15px;
+    width: -moz-fit-content;
+    width: fit-content;
     border-bottom: 3px solid var(--color);
 }
 
@@ -10,9 +10,9 @@
     padding: 0 10px;
     font-size: 5rem;
     font-family: Philosopher, Montserrat, cursive;
-    font-weight:600;
+    font-weight: 600;
     color: var(--color);
     letter-spacing: 3px;
     text-transform: capitalize;
-    text-shadow: 1.5px 1.5px 3px #050505b8;
+    text-shadow: 1.5px 1.5px 3px hsla(var(--theme), 0%, 2%, 0.722);
 }
