--- a/src/CSS/error.css
+++ b/src/CSS/error.css
@@ -1,13 +1,13 @@
 .cls-1 {
-    fill: #fff;
+    fill: var(--text);
 }
 
 .cls-2 {
-    fill: #2b2b28;
+    fill: var(--theme);
 }
 
 .cls-3 {
-    fill: #474743;
+    fill: hsl(var(--code), 3%, 27%);
 }
 
 .ghost > .four {
@@ -27,12 +27,11 @@
     margin: 0;
     display: grid;
     place-items: center;
-
-    background: rgb(19, 24, 17);
+    background: var(--theme);
     background: radial-gradient(
         circle,
-        rgba(19, 24, 17, 1) 50%,
-        rgba(0, 0, 0, 1) 100%
+        var(--theme) 50%,
+        hsl(var(--code), 0%, 0%) 100%
     );
     overflow: hidden;
 }
