--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -11,11 +11,13 @@
 }
 
 :root {
-    /* --color: hsl(0deg 78% 49%); */
-    --code:358;
+    --code: 358;
+    --bcode:0;
     --color: hsl(var(--code, 358), 81%, 49%);
     --theme: hsl(0deg 0% 11%);
     --text: hsl(0, 0%, 100%);
+    --valid: rgb(31, 220, 56);
+    --invalid: hsl(0, 100%, 50%);
 }
 
 ::-webkit-scrollbar {
